--- a/index.html
+++ b/index.html
@@ -1,17 +1,101 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+<!--
+	Identity by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
-  <head>
-    <title>Resume - Julianna Garreffa</title>
-    <style>
-      html, body {
-        height: 100%;
-        min-height: 100%;
-        margin: 0;
-        padding: 0;
-      }
-    </style>
-  </head>
-  <body>
-    <iframe src="https://drive.google.com/file/d/1vbEaDiRmlA7uWvOQt6CppXlFTRC3G4t8/preview" style="width: 100%; height: 100%; border: none; margin: 0;"></iframe>
-  </body>
+	<head>
+		<title>Julianna Garreffa</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="icon" href="favicon.ico" sizes="16x16">
+		<!--[if lte IE 8]><script src="assets/js/html5shiv.js"></script><![endif]-->
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-loading" id="background-override">
+
+		<!-- Wrapper -->
+			<div id="wrapper">
+
+				<!-- Main -->
+					<section id="main">
+                        <style>
+                            .icon-box {
+                                width: 30%;
+                                margin: 0 auto;
+                                display: flex;
+                                text-transform: initial;
+                                font-size: 12px;
+                            }
+
+                            .icon-box .icon {
+                                width: 20%;
+                            }
+
+                            .icon-box .icon .fab,
+                            .icon-box .icon .fa {
+                                font-size: 25px;
+                            }
+
+                            .icon-box .content {
+                                width: 80%;
+                                text-align: center;
+                                line-height: 26px;
+                                text-transform: uppercase;
+                            }
+                        </style>
+						<header>
+							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
+							<h1 style="margin: 0;">Julianna Garreffa</h1>
+							<small style="display:block;margin-bottom: 10px;">Product Manager</small>
+                            <a class="icon-box" href="resume.html" target="_blank">
+                                <div class="icon">
+                                    <i class="fa fa-file-alt"></i>
+                                </div>
+                                <div class="content">
+                                    <span>Resume</span>
+                                </div>
+                            </a>
+
+                            <a class="icon-box" href="https://www.linkedin.com/in/juliannagarreffa/" target="_blank">
+                                <div class="icon">
+                                    <i class="fab fa-linkedin"></i>
+                                </div>
+                                <div class="content">
+                                    <span>Linkedin</span>
+                                </div>
+                            </a>
+						</header>
+                        <hr style="margin: 1.5em 0;">
+                        <main style="max-width: 420px;text-transform: initial;letter-spacing: -0.1px;font-size: 16px;line-height: 20px;text-align: left;">
+                            <p>
+                                Based in the NYC area, I’m a New York University graduate and a <a href="https://www.scrumalliance.org/community/profile/jgarreffa" target="_blank" style="text-decoration: underline;">Certified Scrum Product Owner</a>. I have experience in strategic roadmap planning, launching research-backed product features, orchestrating agile projects, and directing technical client onboarding. 
+                            </p>
+
+                            <p>
+                                I aspire to help make the world a better place by creating products, managing programs, and running campaigns for social enterprises and nonprofits. Always, I strive to lead with empathy for my end users, business stakeholders, and teammates alike.
+                            </p>
+
+                            <p>
+                                I’m personally passionate about traveling, animals, environmental sustainability, music, reading, movies/TV, and cooking.
+                            </p>
+                        </main>
+					</section>
+			</div>
+
+		<!-- Scripts -->
+			<!--[if lte IE 8]><script src="assets/js/respond.min.js"></script><![endif]-->
+			<script>
+				if ('addEventListener' in window) {
+					window.addEventListener('load', function() { document.body.className = document.body.className.replace(/\bis-loading\b/, ''); });
+					document.body.className += (navigator.userAgent.match(/(MSIE|rv:11\.0)/) ? ' is-ie' : '');
+				}
+			</script>
+
+	</body>
 </html>
