--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 		<title>Julianna Garreffa</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="icon" href="favicon.ico" sizes="16x16">
+        	<link rel="icon" href="favicon.ico" sizes="16x16">
+		<link rel="icon" href="favicon.ico" type="image/x-icon" />
 		<!--[if lte IE 8]><script src="assets/js/html5shiv.js"></script><![endif]-->
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+       	 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
@@ -80,6 +81,7 @@
                             <p>
                                 I aspire to help make the world a better place by creating products, managing programs, and running campaigns for social enterprises and nonprofits. Always, I strive to lead with empathy for my end users, business stakeholders, and teammates alike.
                             </p>
+			   <!-- test -->
 
                             <p>
                                 I’m personally passionate about traveling, animals, environmental sustainability, music, reading, movies/TV, and cooking.
