--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
 							<h1 style="margin: 0;">Julianna Garreffa</h1>
 							<small style="display:block;margin-bottom: 10px;">Product Manager</small>
-                            <a class="icon-box" href="resume.html" target="_blank">
+                            <a class="icon-box" href="Julianna-Garreffa-latest.pdf" target="_blank">
                                 <div class="icon">
                                     <i class="fa fa-file-alt"></i>
                                 </div>
